# Open-Radio-Interferometry

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  vivado.jou
.github/workflows/: ci.yml
IP/pfb_block_decimator/: component.xml
IP/pfb_block_decimator/hdl/verilog/: pfb_block_decimator.v  pfb_block_decimator_control_r_s_axi.v  pfb_block_decimator_control_s_axi.v  pfb_block_decimator_flow_control_loop_pipe_sequential_init.v  pfb_block_decimator_gmem_m_axi.v  pfb_block_decimator_hls_deadlock_idx0_monitor.v  pfb_block_decimator_hls_deadlock_kernel_monitor_top.vh  pfb_block_decimator_mac_muladd_16s_16s_31s_31_4_1.v  pfb_block_decimator_mul_11ns_13ns_23_1_1.v  pfb_block_decimator_mul_12ns_14ns_25_1_1.v  pfb_block_decimator_mul_16s_16s_31_1_1.v  pfb_block_decimator_pfb_block_decimator_Pipeline_compute_loop.v  pfb_block_decimator_pfb_block_decimator_Pipeline_load_coeffs.v  pfb_block_decimator_pfb_block_decimator_Pipeline_read_loop.v  pfb_block_decimator_pfb_block_decimator_stream_stream_ap_fixed_const_branch_memory_7_RAM_1P_BRAM_bkb.v  pfb_block_decimator_pfb_block_decimator_stream_stream_ap_fixed_const_local_coeffs_4_RAM_AUTO_1R1W.v  pfb_block_decimator_regslice_both.v  pfb_block_decimator_sparsemux_11_3_16_1_1.v  pfb_block_decimator_sparsemux_9_2_16_1_1.v
IP/pfb_block_decimator/hdl/vhdl/: pfb_block_decimator.vhd  pfb_block_decimator_control_r_s_axi.vhd  pfb_block_decimator_control_s_axi.vhd  pfb_block_decimator_flow_control_loop_pipe_sequential_init.vhd  pfb_block_decimator_gmem_m_axi.vhd  pfb_block_decimator_mac_muladd_16s_16s_31s_31_4_1.vhd  pfb_block_decimator_mul_11ns_13ns_23_1_1.vhd  pfb_block_decimator_mul_12ns_14ns_25_1_1.vhd  pfb_block_decimator_mul_16s_16s_31_1_1.vhd  pfb_block_decimator_pfb_block_decimator_Pipeline_compute_loop.vhd  pfb_block_decimator_pfb_block_decimator_Pipeline_load_coeffs.vhd  (+6 more)
IP/pfb_block_decimator/xgui/: pfb_block_decimator_v1_0.tcl
IP/pfb_multichannel_decimator/: component.xml
IP/pfb_multichannel_decimator/doc/: ReleaseNotes.txt
IP/pfb_multichannel_decimator/drivers/pfb_multichannel_decimator_v1_0/src/: CMakeLists.txt  Makefile  xpfb_multichannel_decimator.c  xpfb_multichannel_decimator.h  xpfb_multichannel_decimator_hw.h  xpfb_multichannel_decimator_linux.c  xpfb_multichannel_decimator_sinit.c
docs/: architecture.md  hardware-setup.md  references.md
examples/: README.md
hls/: .peers.ini
hls/hls_correlator/: compile_commands.json  correlator.h  correlator_io.cpp  correlator_tb.cpp  correlator_tb2.cpp  correlator_top.cpp  hls_config.cfg  vitis-comp.json
hls/hls_correlator/hls_correlator/: hash-map.txt  hls_correlator.hlscompile_summary  hls_correlator.hlsrun_cosim_summary
hls/hls_pfb/: .peers.ini  compile_commands.json  hls_config.cfg  pfb.h  pfb_compute.cpp  pfb_fft.cpp  pfb_helper.cpp  pfb_io.cpp  pfb_tb.cpp  pfb_top.cpp  vitis-comp.json
hls/hls_pfb/hls_pfb/: hash-map.txt  hls_pfb.hlscompile_summary
hls/hls_pfb_sample/: compile_commands.json  hls_config.cfg  pfb.h  pfb_io.cpp  vitis-comp.json
python/: clean.py  clean_app.py  clean_dialog.py  correlator.py  fmcomms5_iio.py  main.py  pfb.py  pfb_coeffs.py  pfb_demo.py  plot.py  settings.py  test.py  ui.py  uv_app.py  uv_simulator.py
src/open_radio_interferometry/: __init__.py  settings.py
src/open_radio_interferometry/apps/: clean_app.py  main.py  uv_app.py  uv_simulator.py
src/open_radio_interferometry/dsp/: correlator.py  pfb.py
src/open_radio_interferometry/imaging/: clean.py
src/open_radio_interferometry/sdr/: fmcomms5_iio.py
src/open_radio_interferometry/ui/: clean_dialog.py  main_window.py
tests/: test_pfb.py
(+467 files in other folders)
